# book2

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
book2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
book2_project/: asgi.py  settings.py  urls.py  wsgi.py
post/: models.py  serializer.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py
tests/: test_book2.py
