[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["Richard Whitehead <damian253@me.com>"]

[tool.poetry.dependencies]
python = "~3.8"
djangorestframework = "^3.11.1"
djangorestframework_simplejwt = "^4.4.0"
django = "^3.1.1"
environ = "^1.0"
django-environ = "^0.4.5"
django-cors-headers = "^3.5.0"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
